temp/objects/SupContact__c.object
<CustomObject>
    <description>The minimal data from the suppliers employee.</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyWords__c</fullName>
        <label>Key-Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierId__c</fullName>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Contacts of Supplier</relationshipLabel>
        <relationshipName>ContactsOfSupplier</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SupContact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Role__c</columns>
        <columns>Position__c</columns>
        <columns>SupplierId__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>KeyWords__c</columns>
        <columns>Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SupContact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>